data/derived/sp14/progs/unify/prog2968.ml.out
Characters 37-52:
  let stringOfList f l = sepConcat ";" (List.map(f l));;
                                       ^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string list
